--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,22 +30,19 @@
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </android.support.v7.widget.RecyclerView>
-
+        android:layout_width="match_parent"
+        android:layout_height="627dp">
+        android:layout_weight="1"></android.support.v7.widget.RecyclerView>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Escribe un mensaje"
             android:layout_weight="1"
             />
-
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
