--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,19 +34,19 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvMensajes"
         android:layout_width="match_parent"
-        android:layout_height="561dp">
+        android:layout_height="486dp">
         android:layout_weight="1"></android.support.v7.widget.RecyclerView>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <EditText
             android:id="@+id/txtMensaje"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Escribe un mensaje"
             android:layout_weight="1"
-            />
+            android:hint="Escribe un mensaje" />
         <Button
             android:id="@+id/btnEnviar"
             android:layout_width="wrap_content"
