--- a/app/src/main/res/layout/card_view_mensajes.xml
+++ b/app/src/main/res/layout/card_view_mensajes.xml
@@ -7,51 +7,57 @@
     cardview:cardCornerRadius="10sp">
 
     <LinearLayout
-
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="60dp"
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="55dp"
+            android:layout_height="match_parent"
             android:padding="10sp">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/fotoPerfilMensaje"
-                android:layout_width="24sp"
-                android:layout_height="24sp"
+                android:layout_width="28dp"
+                android:layout_height="36dp"
                 android:src="@mipmap/ic_launcher" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <TextView
                     android:id="@+id/nombreMensaje"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Daniel" />
+
                 <TextView
                     android:id="@+id/horaMensaje"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="00:00" />
             </LinearLayout>
+
             <TextView
                 android:id="@+id/mensajeMensaje"
-                android:layout_width="wrap_content"
+                android:layout_width="194dp"
                 android:layout_height="wrap_content"
                 android:text="hola bienvenido" />
         </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Daniel" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
