programacion de arrastrado de mensajes hacia abajo

--- a/app/src/main/res/layout/card_view_mensajes.xml
+++ b/app/src/main/res/layout/card_view_mensajes.xml
@@ -48,8 +48,8 @@
 
             <TextView
                 android:id="@+id/mensajeMensaje"
-                android:layout_width="194dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="71dp"
                 android:text="hola bienvenido" />
         </LinearLayout>
 
