--- a/app/src/main/res/layout/card_view_mensajes.xml
+++ b/app/src/main/res/layout/card_view_mensajes.xml
@@ -47,10 +47,17 @@
             </LinearLayout>
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/mensajeMensaje"
                 android:layout_width="match_parent"
                 android:layout_height="71dp"
-                android:text="hola bienvenido" />
+                android:text="hola bienvenido"
+                />
+            <ImageView
+                android:id="@+id/mensajeFoto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
         </LinearLayout>
 
         <TextView
