--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -12,25 +12,29 @@
         android:id="@+id/idRegistroNombre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Nombre"/>
+        android:hint="Nombre"
+        android:background="@drawable/boton_circular"/>
     <EditText
         android:id="@+id/idRegistroCorreo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Correo"
-        android:inputType="textEmailAddress"/>
+        android:inputType="textEmailAddress"
+        android:background="@drawable/boton_circular"/>
     <EditText
         android:id="@+id/idRegistroContraseña"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Contraseña"
-        android:inputType="textPassword"/>
+        android:inputType="textPassword"
+        android:background="@drawable/boton_circular"/>
     <EditText
         android:id="@+id/idRegistroContraseñaRepetida"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Repetir contraseña"
-        android:inputType="textPassword"/>
+        android:inputType="textPassword"
+        android:background="@drawable/boton_circular"/>
 
     <Button
         android:id="@+id/idRegistroRegistrar"
